--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/fira-code": "^5.2.6",
+    "@fontsource/inter": "^5.2.6",
+    "@fontsource/playfair-display": "^5.2.6",
     "@fontsource/roboto": "^5.0.8",
     "@formkit/drag-and-drop": "^0.5.0",
     "@tanstack/react-table": "^8.10.0",
