refactor: Simplify Vite configuration and remove unused authentication files

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,4 @@
-# NextAuth.js Configuration
-NEXTAUTH_URL=http://localhost:5174
-NEXTAUTH_SECRET=generate-a-random-secret-here
-
-# GitHub OAuth App Configuration
-# Obtén estos valores creando una GitHub OAuth App en:
+# GitHub OAuth configuration for Vite
+# Obtén este valor creando una GitHub OAuth App en:
 # https://github.com/settings/applications/new
-GITHUB_CLIENT_ID=your-github-client-id
-GITHUB_CLIENT_SECRET=your-github-client-secret
-
-# Optional: Database URL for persistent sessions
-# DATABASE_URL=postgresql://username:password@localhost:5432/database_name
+VITE_GITHUB_CLIENT_ID=your-github-client-id
