--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,7 @@
     "types": ["vite/client"]
   },
   "include": ["src", "examples"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{
+    "path": "./tsconfig.node.json"
+  }]
 }
